# rockface

./: CMakeLists.txt  ChangeLog.txt  VERSION
auth/: README.md
auth/Android/arm64-v8a/: rkdevice_info
auth/Android/armeabi-v7a/: rkdevice_info
auth/Linux/aarch64/: rkauth_tool  rkdevice_info
auth/Linux/armhf/: rkauth_tool  rkdevice_info
auth/Linux/x86_64/: rkauth_tool
demo/command_line_demo/: CMakeLists.txt  README.md  build-android-rk3399pro.sh  build-linux-rk1808.sh  build-linux-rk3399pro.sh
demo/command_line_demo/rockface_analyze/: face_analyze.cpp
demo/command_line_demo/rockface_liveness/: rockface_liveness.cpp
demo/command_line_demo/rockface_recognition_1v1/: recognition_1v1.cpp
demo/command_line_demo/rockface_recognition_1vn/: face_db.c  import_face_library.cpp  recognition_1vn.cpp  rockface_recognition.c
doc/rockface_api_doc_cn/html/: annotated.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  menudata.js  rockface_8h.html  rockface_8h_source.html  rockface__analyze_8h.html  rockface__analyze_8h_source.html  rockface__detect_8h.html  rockface__detect_8h_source.html  rockface__image_8h.html  rockface__image_8h_source.html  rockface__liveness_8h.html  (+17 more)
sdk/rockface-data/: face_detection_v3_fast.data  face_detection_v3_large.data  face_landmark5.data  face_liveness_2d.data
sdk/rockface-data-rv1109/: face_attribute.data  face_detection_v2.data  face_detection_v3.data  face_detection_v3_fast.data  face_detection_v3_large.data  face_landmark5.data  face_liveness_2d.data  face_mask_classify.data
sdk/rockface-rk1808-Linux/: RockFaceConfig.cmake
sdk/rockface-rv1109-Linux/: RockFaceConfig.cmake
(+28 files in other folders)
